{
    "name": "PlayerControlls",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "ea29375d-cbc8-4cf9-b254-c773fbafa9ed",
            "actions": [
                {
                    "name": "Thrust",
                    "type": "Button",
                    "id": "20637b35-476e-47e4-88a4-7306e4ee71bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "c6ff95d1-abe3-49b0-a394-9d1a7296685b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Break",
                    "type": "Button",
                    "id": "60f03373-1367-4e61-a28a-80370b2755f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootL",
                    "type": "Button",
                    "id": "427a275a-d447-4722-a8cc-fd54dfc0e47a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShoorR",
                    "type": "Button",
                    "id": "2f786e89-1e14-49ab-b726-3d5cdc5f8eb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpeedBoost",
                    "type": "Button",
                    "id": "89d7b243-62d3-414d-8379-50a9033447bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootLeftCannon",
                    "type": "Button",
                    "id": "3eefa1a4-eaea-4229-9783-8557376d27e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootRightCannon",
                    "type": "Button",
                    "id": "103f5f51-779d-4191-9c35-4ea5c8ff51d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4138f92-6c9a-4c97-a3e7-5d5bf2022239",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "1665c273-d9ae-4bb3-9f2b-a18accff85f5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8e126a43-ab94-43fb-af37-d24f57f795b2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e66dcdf7-b036-4e4c-ae4b-a78da86a6e87",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f139b0d2-456d-4aa1-ac1f-56acd2f2cb93",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "629d023e-df32-4dcb-851c-045e46622c2f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5e917603-1813-4f43-bfc9-77705ceb0745",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Break",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd17c7e5-7365-4866-a027-1fdb0cb83038",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold,Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ShootL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bec29fe-c9c4-423f-a594-7e034a236ba1",
                    "path": "<Keyboard>/q",
                    "interactions": "Hold,Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ShoorR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2318a594-32cc-4b5c-a5f7-77f038128ad1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eaa34401-fa50-4e53-9fb0-52de74d37f91",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLeftCannon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b799f95-9747-4377-8440-a5808cb53408",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRightCannon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}